--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "sass": "^1.34.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.5.1",
     "css-loader": "^2.1.1",
     "exports-loader": "^0.7.0",
     "html-loader": "^0.5.5",
-    "node-sass": "^4.11.0",
+    "node-sass": "^6.0.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
