--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server --hot --inline",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile:sass": "node-sass scss\\style.scss css\\style.css"
   },
   "repository": {
     "type": "git",
